--- a/.github/workflows/puppeteer.yml
+++ b/.github/workflows/puppeteer.yml
@@ -11,9 +11,9 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    # strategy:
-    #   matrix:
-    #     node-version: [15.x]
+    strategy:
+      matrix:
+        node-version: [15.x]
 
     steps:
       - uses: actions/checkout@v2
