--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/tamakiii-sandbox/github-actions-browser-testing#readme",
   "dependencies": {
+    "http-server": "^0.12.3",
     "puppeteer": "^7.1.0"
   }
 }
