--- a/.github/workflows/puppeteer.yml
+++ b/.github/workflows/puppeteer.yml
@@ -20,5 +20,6 @@ jobs:
         with:
           node-version: '15.x'
 
-      - name: Test
-        run: make -f github-actions.mk test
+      - run: make -f github-actions.mk start
+
+      - run: make -f github-actions.mk test
