--- a/.github/workflows/puppeteer.yml
+++ b/.github/workflows/puppeteer.yml
@@ -20,6 +20,7 @@ jobs:
         with:
           node-version: '15.x'
 
-      - run: make -f github-actions.mk install
-      - run: make -f github-actions.mk start
-      - run: make -f github-actions.mk test
+      - run: |
+          make -f github-actions.mk install
+          make -f github-actions.mk start
+          make -f github-actions.mk test
