--- a/.github/workflows/puppeteer.yml
+++ b/.github/workflows/puppeteer.yml
@@ -22,4 +22,5 @@ jobs:
 
       - run: make -f github-actions.mk install
       - run: make -f github-actions.mk start
+      - run: sleep 3
       - run: make -f github-actions.mk test
